# math-bibmanager

./: AUTHORS  BUGS  CMakeLists.txt  INSTALL  Makefile.am  NEWS  README  autogen.sh  config.h.cmake  configure.ac
parser/: CMakeLists.txt  Makefile.am  library.cpp  library.hpp  msc2010.cpp  msc2010.hpp  msc2010_db.h  parser.cpp  parser.hpp  test.zb  test_parser.cpp
src/: BibPopup.cpp  BibPopup.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  Makefile.am  TreeBib.cpp  TreeBib.hpp  main.cpp  menubar.ui  uidef.xml
